
2020-10-12  Ron Norman <rjn@inglenet.com>

	* intrinsic.c, move.c, numeric.c, termio.c: updates to process
	  COB_TYPE_NUMERIC_COMP5 the same as COB_TYPE_NUMERIC_BINARY
	  except for DISPLAY then only display for f->attr->digits

2020-10-02  Ron Norman <rjn@inglenet.com>

	* fileio.h, fodbc.c: tested using PostgreSQL

2020-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (install-data-hook): removed as per initial patch from
	  Eric Gallager in bug #73, fixing bug #576

2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am [LOCAL_CJSON]: moved to "lib"
	* Makefile.am: fixed inclusion of libsupport
	* coblocal.h: include gettext without lib prefix

2020-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c [WITH_JSON_C]: added version output
	* mlio.c: adjusted check of defines for XML/JSON,
	  include json-c according to its docs
	* common.h, coblocal.h: moved definition of cob_module_free to stay local

2020-09-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: removed support for VC older than VC 2008

2020-07-25  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (cob_screen_get_all): improve number entry:
	   1. in insert mode, position cursor at rightmost integer digit upon
	      entering a field;
	   2. in insert mode, only beep at last character when no insertion is
          possible

2020-07-20  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (cob_screen_get_all): improve number entry:
	   1. prevent deletion, backspacing over or overwriting of decimal point;
	   2. entering decimal point jumps to character after it;
	   3. allow entry of sign;
	   4. entering sign jumps to sign;
	   5. create (hopefully) nice insert behaviour for numbers: cursor on
	      integral digits inserts to right, cursor on decimal digits inserts
          to left

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* mlio.c, common.h: added support for JSON-C as JSON handler.
