@@ -1,6 +1,11 @@
 
 2020-10-12  Ron Norman <rjn@inglenet.com>
 
+	* common.c: Add cob_ncase_cmp and cob_str_case_str
+	* foci.c, fodbc.c: use cob_str_case_str instead of strcasestr
+
+2020-10-12  Ron Norman <rjn@inglenet.com>
+
 	* intrinsic.c, move.c, numeric.c, termio.c: updates to process
 	  COB_TYPE_NUMERIC_COMP5 the same as COB_TYPE_NUMERIC_BINARY
 	  except for DISPLAY then only display for f->attr->digits
